--- a/data/config.json
+++ b/data/config.json
@@ -2,14 +2,12 @@
     "terminal_width": 64,
     "terminal_height": 36,
     "consoles":
-    [
-        {
-            "x": 0,
-            "y": 0,
-            "width": 64,
-            "height": 28
-        }
-    ],
+    {
+        "x": [0, 0, 0, 0, 0, 0, 0, 0, 0, 16],
+        "y": [0, 0, 0, 0, 0, 0, 0, 27, 27, 27],
+        "width": [64, 64, 64, 64, 64, 64, 64, 64, 16, 48],
+        "height": [27, 27, 27, 27, 27, 27, 27, 9, 9, 9]
+    },
     "fov_algorithm": 12,
     "fov_light_walls": true
 }
