Separated map consoles from interface consoles

--- a/data/config.json
+++ b/data/config.json
@@ -3,10 +3,20 @@
     "terminal_height": 36,
     "consoles":
     {
-        "x": [0, 0, 0, 0, 0, 0, 0, 0, 0, 16],
-        "y": [0, 0, 0, 0, 0, 0, 0, 27, 27, 27],
-        "width": [64, 64, 64, 64, 64, 64, 64, 64, 16, 48],
-        "height": [27, 27, 27, 27, 27, 27, 27, 9, 9, 9]
+        "map":
+        {
+            "x":        [0,  0,  0,  0,  0,  0,  0 ],
+            "y":        [0,  0,  0,  0,  0,  0,  0 ],
+            "width":    [64, 64, 64, 64, 64, 64, 64],
+            "height":   [27, 27, 27, 27, 27, 27, 27]
+        },
+        "interface":
+        {
+            "x":        [0,  0,  16],
+            "y":        [27, 27, 27],
+            "width":    [64, 16, 48],
+            "height":   [9,  9,  9 ]
+        }
     },
     "fov_algorithm": 12,
     "fov_light_walls": true
