Bunched all components up, and more cleanups

--- a/data/config.json
+++ b/data/config.json
@@ -5,10 +5,10 @@
     {
         "map":
         {
-            "x":        [0,  0,  0,  0,  0,  0,  0 ],
-            "y":        [0,  0,  0,  0,  0,  0,  0 ],
-            "width":    [64, 64, 64, 64, 64, 64, 64],
-            "height":   [27, 27, 27, 27, 27, 27, 27]
+            "x":        0,
+            "y":        0,
+            "width":    64,
+            "height":   27
         },
         "interface":
         {
