--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Project
+unused/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -105,6 +108,3 @@ venv.bak/
 
 # VS Code
 .vscode/
-
-# Custom
-unused/
