Rearrangements, new palette

--- a/data/config.json
+++ b/data/config.json
@@ -5,19 +5,18 @@
     {
         "map":
         {
-            "x":        0,
-            "y":        0,
-            "width":    64,
-            "height":   27
+            "x": 0,
+            "y": 0,
+            "w": 64,
+            "h": 27
         },
-        "interface":
+        "ui":
         {
-            "x":        [0,  0,  16],
-            "y":        [27, 27, 27],
-            "width":    [64, 16, 48],
-            "height":   [9,  9,  9 ]
+            "x": [0,  0,  16],
+            "y": [27, 27, 27],
+            "w": [64, 16, 48],
+            "h": [9,  9,  9 ]
         }
     },
-    "fov_algorithm": 12,
-    "fov_light_walls": true
+    "palette": "db32"
 }
